Updated after https://github.com/b3dgs/lionengine/issues/808
Single build profile.